--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "version": "0.1.0",
   "author": "Tyler Campbell",
   "dependencies": {
+    "@emotion/core": "^10.0.28",
+    "@emotion/styled": "^10.0.27",
     "@fortawesome/fontawesome-free": "^5.12.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.27",
     "@fortawesome/free-brands-svg-icons": "^5.12.1",
@@ -13,6 +15,7 @@
     "@fortawesome/react-fontawesome": "^0.1.8",
     "gatsby": "^2.19.7",
     "gatsby-image": "^2.2.39",
+    "gatsby-plugin-emotion": "^4.1.24",
     "gatsby-plugin-manifest": "^2.2.39",
     "gatsby-plugin-offline": "^3.0.32",
     "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
