--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "@fortawesome/free-regular-svg-icons": "^5.12.1",
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "@fortawesome/react-fontawesome": "^0.1.8",
-    "gatsby": "^2.19.7",
+    "gatsby": "^2.19.47",
     "gatsby-background-image": "^0.10.2",
     "gatsby-image": "^2.2.39",
+    "gatsby-plugin-catch-links": "^2.1.28",
     "gatsby-plugin-emotion": "^4.1.24",
     "gatsby-plugin-manifest": "^2.2.39",
     "gatsby-plugin-offline": "^3.0.32",
@@ -23,6 +24,7 @@
     "gatsby-plugin-react-helmet": "^3.1.21",
     "gatsby-plugin-sharp": "^2.4.3",
     "gatsby-source-filesystem": "^2.1.46",
+    "gatsby-transformer-remark": "^2.6.59",
     "gatsby-transformer-sharp": "^2.3.13",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
