--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby-image": "^2.2.39",
     "gatsby-plugin-catch-links": "^2.1.28",
     "gatsby-plugin-emotion": "^4.1.24",
+    "gatsby-plugin-google-analytics": "^2.2.0",
     "gatsby-plugin-manifest": "^2.2.39",
     "gatsby-plugin-offline": "^3.0.32",
     "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
