--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@fortawesome/free-regular-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.11",
     "antd": "^4.5.4",
+    "axios": "^0.20.0",
+    "chart.js": "^2.9.4",
     "gatsby": "^2.24.47",
     "gatsby-plugin-catch-links": "^2.3.11",
     "gatsby-plugin-emotion": "^4.3.10",
@@ -23,6 +25,7 @@
     "gatsby-transformer-remark": "^2.8.28",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
+    "react-chartjs-2": "^2.10.0",
     "react-dom": "^16.13.1",
     "react-helmet": "^5.2.1"
   },
