--- a/package.json
+++ b/package.json
@@ -1,36 +1,36 @@
 {
   "name": "gatsby-portfolio",
   "private": true,
-  "description": "A virtual resume to showcase my abilities and potential",
-  "version": "1.1.0",
+  "description": "A portfolio crafted to exhibit a unique collection of personal projects",
+  "version": "2.0.0",
   "author": "Tyler Campbell",
   "dependencies": {
-    "@emotion/core": "^10.0.35",
+    "@emotion/core": "^10.1.0",
     "@emotion/styled": "^10.0.27",
-    "@fortawesome/fontawesome-svg-core": "^1.2.30",
-    "@fortawesome/free-brands-svg-icons": "^5.14.0",
-    "@fortawesome/free-regular-svg-icons": "^5.14.0",
-    "@fortawesome/react-fontawesome": "^0.1.11",
-    "antd": "^4.5.4",
-    "axios": "^0.20.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-brands-svg-icons": "^5.15.1",
+    "@fortawesome/free-regular-svg-icons": "^5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.12",
+    "antd": "^4.7.3",
+    "axios": "^0.21.0",
     "chart.js": "^2.9.4",
-    "gatsby": "^2.24.47",
-    "gatsby-plugin-catch-links": "^2.3.11",
-    "gatsby-plugin-emotion": "^4.3.10",
-    "gatsby-plugin-google-analytics": "^2.3.13",
-    "gatsby-plugin-manifest": "^2.4.23",
-    "gatsby-plugin-offline": "^3.2.23",
-    "gatsby-plugin-react-helmet": "^3.3.10",
-    "gatsby-source-filesystem": "^2.3.24",
-    "gatsby-transformer-remark": "^2.8.28",
+    "gatsby": "^2.24.91",
+    "gatsby-plugin-catch-links": "^2.3.15",
+    "gatsby-plugin-emotion": "^4.3.14",
+    "gatsby-plugin-google-analytics": "^2.3.19",
+    "gatsby-plugin-manifest": "^2.4.37",
+    "gatsby-plugin-offline": "^3.2.38",
+    "gatsby-plugin-react-helmet": "^3.3.14",
+    "gatsby-source-filesystem": "^2.3.37",
+    "gatsby-transformer-remark": "^2.8.47",
     "prop-types": "^15.7.2",
-    "react": "^16.13.1",
+    "react": "^17.0.1",
     "react-chartjs-2": "^2.10.0",
-    "react-dom": "^16.13.1",
-    "react-helmet": "^5.2.1"
+    "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
-    "prettier": "^1.19.1"
+    "prettier": "^2.1.2"
   },
   "keywords": [
     "gatsby"
