--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gatsby-portfolio",
   "private": true,
   "description": "The portfolio of Tyler Campbell; Full Stack Software Engineer",
-  "version": "2.1.0",
+  "version": "3.0.0",
   "author": "Tyler Campbell",
   "dependencies": {
     "@emotion/core": "^10.1.0",
@@ -29,10 +29,33 @@
     "react": "^17.0.1",
     "react-chartjs-2": "^2.10.0",
     "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "tsconfig-paths-webpack-plugin": "3.3.0"
   },
   "devDependencies": {
-    "prettier": "^2.1.2"
+    "@commitlint/cli": "11.0.0",
+    "@commitlint/config-conventional": "11.0.0",
+    "@types/node": "14.14.20",
+    "@types/react": "17.0.0",
+    "@types/react-dom": "17.0.0",
+    "@typescript-eslint/eslint-plugin": "4.13.0",
+    "@typescript-eslint/parser": "4.13.0",
+    "babel-plugin-root-import": "6.6.0",
+    "commitizen": "4.2.2",
+    "cz-conventional-changelog": "3.3.0",
+    "eslint": "7.17.0",
+    "eslint-config-airbnb": "18.2.1",
+    "eslint-config-prettier": "7.1.0",
+    "eslint-import-resolver-root-import": "1.0.4",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jsx-a11y": "6.4.1",
+    "eslint-plugin-prettier": "3.3.1",
+    "eslint-plugin-react": "7.22.0",
+    "eslint-plugin-react-hooks": "4.2.0",
+    "husky": "4.3.7",
+    "lint-staged": "10.5.3",
+    "prettier": "2.2.1",
+    "typescript": "4.1.3"
   },
   "keywords": [
     "gatsby"
@@ -43,7 +66,9 @@
     "start": "gatsby develop -H 0.0.0.0",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
+    "type-check": "tsc",
+    "lint": "eslint --ignore-path .gitignore \"src/**/*.+(ts|js|tsx)\" --fix",
+    "format": "prettier --ignore-path .gitignore \"src/**/*.+(ts|js|tsx)\" --write",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "repository": {
