--- a/package.json
+++ b/package.json
@@ -6,25 +6,26 @@
   "author": "Tyler Campbell",
   "dependencies": {
     "@emotion/core": "^11.0.0",
-    "@emotion/styled": "^11.1.5",
+    "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.3.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
     "@fortawesome/free-regular-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
-    "antd": "^4.14.1",
+    "antd": "^4.15.2",
     "axios": "^0.21.1",
-    "chart.js": "^2.9.4",
-    "gatsby": "^3.1.2",
-    "gatsby-plugin-catch-links": "^3.1.0",
-    "gatsby-plugin-emotion": "^6.1.0",
-    "gatsby-plugin-google-analytics": "^3.1.0",
-    "gatsby-plugin-manifest": "^3.1.0",
-    "gatsby-plugin-offline": "^4.1.0",
-    "gatsby-plugin-react-helmet": "^4.1.0",
-    "gatsby-plugin-robots-txt": "^1.5.5",
-    "gatsby-plugin-sitemap": "^3.1.0",
-    "gatsby-source-filesystem": "^3.1.0",
-    "gatsby-transformer-remark": "^3.1.0",
+    "chart.js": "^3.1.1",
+    "gatsby": "^3.3.1",
+    "gatsby-plugin-catch-links": "^3.3.0",
+    "gatsby-plugin-emotion": "^6.3.0",
+    "gatsby-plugin-google-analytics": "^3.3.0",
+    "gatsby-plugin-manifest": "^3.3.0",
+    "gatsby-plugin-offline": "^4.3.0",
+    "gatsby-plugin-react-helmet": "^4.3.0",
+    "gatsby-plugin-robots-txt": "^1.5.6",
+    "gatsby-plugin-sitemap": "^3.3.0",
+    "gatsby-source-filesystem": "^3.3.0",
+    "gatsby-transformer-remark": "^4.0.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-chartjs-2": "^2.11.1",
@@ -33,29 +34,29 @@
     "tsconfig-paths-webpack-plugin": "3.5.1"
   },
   "devDependencies": {
-    "@commitlint/cli": "12.0.1",
-    "@commitlint/config-conventional": "12.0.1",
-    "@types/node": "14.14.37",
+    "@commitlint/cli": "12.1.1",
+    "@commitlint/config-conventional": "12.1.1",
+    "@types/node": "14.14.41",
     "@types/react": "17.0.3",
     "@types/react-dom": "17.0.3",
-    "@typescript-eslint/eslint-plugin": "4.19.0",
-    "@typescript-eslint/parser": "4.19.0",
+    "@typescript-eslint/eslint-plugin": "4.22.0",
+    "@typescript-eslint/parser": "4.22.0",
     "babel-plugin-root-import": "6.6.0",
     "commitizen": "4.2.3",
     "cz-conventional-changelog": "3.3.0",
-    "eslint": "7.23.0",
+    "eslint": "7.24.0",
     "eslint-config-airbnb": "18.2.1",
-    "eslint-config-prettier": "8.1.0",
+    "eslint-config-prettier": "8.2.0",
     "eslint-import-resolver-root-import": "1.0.4",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsx-a11y": "6.4.1",
-    "eslint-plugin-prettier": "3.3.1",
-    "eslint-plugin-react": "7.23.1",
+    "eslint-plugin-prettier": "3.4.0",
+    "eslint-plugin-react": "7.23.2",
     "eslint-plugin-react-hooks": "4.2.0",
-    "husky": "5.2.0",
+    "husky": "6.0.0",
     "lint-staged": "10.5.4",
     "prettier": "2.2.1",
-    "typescript": "4.2.3"
+    "typescript": "4.2.4"
   },
   "keywords": [
     "gatsby"
