--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@fortawesome/react-fontawesome": "^0.1.14",
     "antd": "^4.15.2",
     "axios": "^0.21.1",
-    "chart.js": "^3.1.1",
+    "chart.js": "^3.2.0",
     "gatsby": "^3.3.1",
     "gatsby-plugin-catch-links": "^3.3.0",
     "gatsby-plugin-emotion": "^6.3.0",
@@ -24,11 +24,12 @@
     "gatsby-plugin-react-helmet": "^4.3.0",
     "gatsby-plugin-robots-txt": "^1.5.6",
     "gatsby-plugin-sitemap": "^3.3.0",
+    "gatsby-plugin-typescript": "^3.3.0",
     "gatsby-source-filesystem": "^3.3.0",
     "gatsby-transformer-remark": "^4.0.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
-    "react-chartjs-2": "^2.11.1",
+    "react-chartjs-2": "^3.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "tsconfig-paths-webpack-plugin": "3.5.1"
@@ -36,17 +37,17 @@
   "devDependencies": {
     "@commitlint/cli": "12.1.1",
     "@commitlint/config-conventional": "12.1.1",
-    "@types/node": "14.14.41",
-    "@types/react": "17.0.3",
-    "@types/react-dom": "17.0.3",
+    "@types/node": "^14.14.41",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3",
     "@typescript-eslint/eslint-plugin": "4.22.0",
     "@typescript-eslint/parser": "4.22.0",
     "babel-plugin-root-import": "6.6.0",
     "commitizen": "4.2.3",
     "cz-conventional-changelog": "3.3.0",
-    "eslint": "7.24.0",
+    "eslint": "7.25.0",
     "eslint-config-airbnb": "18.2.1",
-    "eslint-config-prettier": "8.2.0",
+    "eslint-config-prettier": "8.3.0",
     "eslint-import-resolver-root-import": "1.0.4",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsx-a11y": "6.4.1",
@@ -67,11 +68,9 @@
     "start": "gatsby develop -H 0.0.0.0",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "tsc": "tsc",
-    "lint": "eslint --ignore-path .gitignore \"src/**/*.+(ts|js|tsx)\" --fix",
-    "format": "prettier --ignore-path .gitignore \"src/**/*.+(ts|js|tsx)\" --write",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
-    "watch": "tsc --watch --noEmit --project './tsconfig.json'"
+    "lint": "eslint . --ext ts --ext tsx'",
+    "test": "npm run type-check && npm run lint",
+    "type-check": "tsc --pretty --noEmit"
   },
   "repository": {
     "type": "git",
