--- a/package.json
+++ b/package.json
@@ -6,57 +6,60 @@
   "author": "Tyler Campbell",
   "dependencies": {
     "@emotion/core": "^11.0.0",
-    "@emotion/react": "^11.4.0",
-    "@emotion/styled": "^11.3.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.35",
-    "@fortawesome/free-brands-svg-icons": "^5.15.3",
-    "@fortawesome/free-regular-svg-icons": "^5.15.3",
-    "@fortawesome/react-fontawesome": "^0.1.14",
-    "antd": "^4.16.2",
-    "axios": "^0.21.1",
-    "chart.js": "^3.3.2",
-    "gatsby": "^3.7.1",
-    "gatsby-plugin-catch-links": "^3.7.1",
-    "gatsby-plugin-emotion": "^6.7.1",
-    "gatsby-plugin-google-analytics": "^3.7.1",
-    "gatsby-plugin-manifest": "^3.7.1",
-    "gatsby-plugin-offline": "^4.7.1",
-    "gatsby-plugin-react-helmet": "^4.7.1",
-    "gatsby-plugin-robots-txt": "^1.6.2",
-    "gatsby-plugin-sitemap": "^4.3.1",
-    "gatsby-plugin-typescript": "^3.7.1",
-    "gatsby-source-filesystem": "^3.7.1",
-    "gatsby-transformer-remark": "^4.4.1",
-    "prop-types": "^15.7.2",
+    "@emotion/react": "^11.8.1",
+    "@emotion/styled": "^11.8.1",
+    "@fortawesome/fontawesome-svg-core": "^1.3.0",
+    "@fortawesome/free-brands-svg-icons": "^6.0.0",
+    "@fortawesome/free-regular-svg-icons": "^6.0.0",
+    "@fortawesome/react-fontawesome": "^0.1.17",
+    "antd": "^4.18.9",
+    "axios": "^0.26.0",
+    "chart.js": "^3.7.1",
+    "gatsby": "^4.9.1",
+    "gatsby-plugin-catch-links": "^4.9.0",
+    "gatsby-plugin-emotion": "^7.9.0",
+    "gatsby-plugin-google-analytics": "^4.9.0",
+    "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-manifest": "^4.9.0",
+    "gatsby-plugin-offline": "^5.9.0",
+    "gatsby-plugin-react-helmet": "^5.9.0",
+    "gatsby-plugin-robots-txt": "^1.7.0",
+    "gatsby-plugin-sitemap": "^5.9.0",
+    "gatsby-plugin-typescript": "^4.9.0",
+    "gatsby-source-filesystem": "^4.9.0",
+    "gatsby-transformer-remark": "^5.9.0",
+    "prop-types": "^15.8.1",
     "react": "^17.0.2",
-    "react-chartjs-2": "^3.0.3",
+    "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
-    "tsconfig-paths-webpack-plugin": "3.5.1"
+    "tsconfig-paths-webpack-plugin": "3.5.2"
   },
   "devDependencies": {
-    "@commitlint/cli": "12.1.4",
-    "@commitlint/config-conventional": "12.1.4",
-    "@types/node": "^15.12.2",
-    "@types/react": "^17.0.11",
-    "@types/react-dom": "^17.0.7",
-    "@typescript-eslint/eslint-plugin": "4.26.1",
-    "@typescript-eslint/parser": "4.26.1",
+    "@commitlint/cli": "16.2.1",
+    "@commitlint/config-conventional": "16.2.1",
+    "@types/node": "^17.0.21",
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.13",
+    "@typescript-eslint/eslint-plugin": "^5.13.0",
+    "@typescript-eslint/parser": "^5.13.0",
     "commitizen": "4.2.4",
     "cz-conventional-changelog": "3.3.0",
-    "eslint": "7.28.0",
-    "eslint-config-airbnb": "18.2.1",
-    "eslint-config-prettier": "8.3.0",
+    "eslint": "^8.10.0",
+    "eslint-config-prettier": "8.5.0",
     "eslint-import-resolver-root-import": "1.0.4",
-    "eslint-plugin-import": "2.23.4",
-    "eslint-plugin-jsx-a11y": "6.4.1",
-    "eslint-plugin-prettier": "3.4.0",
-    "eslint-plugin-react": "7.24.0",
-    "eslint-plugin-react-hooks": "4.2.0",
-    "husky": "6.0.0",
-    "lint-staged": "11.0.0",
-    "prettier": "2.3.1",
-    "typescript": "4.3.2"
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "4.0.0",
+    "eslint-plugin-react": "^7.29.3",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
+    "eslint-webpack-plugin": "^3.1.1",
+    "gatsby-plugin-eslint": "^4.0.2",
+    "husky": "7.0.4",
+    "lint-staged": "12.3.5",
+    "prettier": "2.5.1",
+    "typescript": "4.6.2"
   },
   "keywords": [
     "gatsby"
@@ -67,7 +70,7 @@
     "start": "gatsby develop -H 0.0.0.0",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "lint": "eslint . --ext ts --ext tsx'",
+    "lint": "eslint . --ext ts,tsx --fix",
     "test": "npm run type-check && npm run lint",
     "type-check": "tsc --pretty --noEmit"
   },
