--- a/package.json
+++ b/package.json
@@ -5,61 +5,64 @@
   "version": "3.0.0",
   "author": "Tyler Campbell",
   "dependencies": {
+    "@ant-design/compatible": "^5.1.1",
+    "@ant-design/pro-layout": "^7.5.1",
     "@emotion/core": "^11.0.0",
-    "@emotion/react": "^11.8.1",
-    "@emotion/styled": "^11.8.1",
-    "@fortawesome/fontawesome-svg-core": "^1.3.0",
-    "@fortawesome/free-brands-svg-icons": "^6.0.0",
-    "@fortawesome/free-regular-svg-icons": "^6.0.0",
-    "@fortawesome/react-fontawesome": "^0.1.17",
-    "antd": "^4.18.9",
-    "axios": "^0.26.0",
-    "chart.js": "^3.7.1",
-    "gatsby": "^4.9.1",
-    "gatsby-plugin-catch-links": "^4.9.0",
-    "gatsby-plugin-emotion": "^7.9.0",
-    "gatsby-plugin-google-analytics": "^4.9.0",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-brands-svg-icons": "^6.2.1",
+    "@fortawesome/free-regular-svg-icons": "^6.2.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "antd": "^5.1.2",
+    "axios": "^1.2.2",
+    "chart.js": "^4.1.1",
+    "gatsby": "^5.3.3",
+    "gatsby-plugin-catch-links": "^5.3.0",
+    "gatsby-plugin-emotion": "^8.3.0",
+    "gatsby-plugin-google-analytics": "^5.3.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
-    "gatsby-plugin-manifest": "^4.9.0",
-    "gatsby-plugin-offline": "^5.9.0",
-    "gatsby-plugin-react-helmet": "^5.9.0",
-    "gatsby-plugin-robots-txt": "^1.7.0",
-    "gatsby-plugin-sitemap": "^5.9.0",
-    "gatsby-plugin-typescript": "^4.9.0",
-    "gatsby-source-filesystem": "^4.9.0",
-    "gatsby-transformer-remark": "^5.9.0",
+    "gatsby-plugin-manifest": "^5.3.1",
+    "gatsby-plugin-offline": "^6.3.1",
+    "gatsby-plugin-react-helmet": "^6.3.0",
+    "gatsby-plugin-robots-txt": "^1.8.0",
+    "gatsby-plugin-sitemap": "^6.3.1",
+    "gatsby-plugin-typescript": "^5.3.1",
+    "gatsby-source-filesystem": "^5.3.1",
+    "gatsby-transformer-remark": "^6.3.2",
     "prop-types": "^15.8.1",
-    "react": "^17.0.2",
-    "react-chartjs-2": "^4.0.1",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-chartjs-2": "^5.1.0",
+    "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
-    "tsconfig-paths-webpack-plugin": "3.5.2"
+    "tsconfig-paths-webpack-plugin": "4.0.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "16.2.1",
-    "@commitlint/config-conventional": "16.2.1",
-    "@types/node": "^17.0.21",
-    "@types/react": "^17.0.39",
-    "@types/react-dom": "^17.0.13",
-    "@typescript-eslint/eslint-plugin": "^5.13.0",
-    "@typescript-eslint/parser": "^5.13.0",
-    "commitizen": "4.2.4",
+    "@commitlint/cli": "17.3.0",
+    "@commitlint/config-conventional": "17.3.0",
+    "@types/antd": "^1.0.0",
+    "@types/node": "^18.11.18",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.10",
+    "@typescript-eslint/eslint-plugin": "^5.47.1",
+    "@typescript-eslint/parser": "^5.47.1",
+    "commitizen": "4.2.6",
     "cz-conventional-changelog": "3.3.0",
-    "eslint": "^8.10.0",
+    "eslint": "^8.31.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-import-resolver-root-import": "1.0.4",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-prettier": "4.0.0",
-    "eslint-plugin-react": "^7.29.3",
-    "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-react": "^7.31.11",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-unused-imports": "^2.0.0",
-    "eslint-webpack-plugin": "^3.1.1",
-    "gatsby-plugin-eslint": "^4.0.2",
-    "husky": "7.0.4",
-    "lint-staged": "12.3.5",
-    "prettier": "2.5.1",
-    "typescript": "4.6.2"
+    "eslint-webpack-plugin": "^3.2.0",
+    "gatsby-plugin-eslint": "^4.0.3",
+    "husky": "8.0.2",
+    "lint-staged": "13.1.0",
+    "prettier": "2.8.1",
+    "typescript": "4.9.4"
   },
   "keywords": [
     "gatsby"
