--- a/package.json
+++ b/package.json
@@ -35,29 +35,41 @@
     "tsconfig-paths-webpack-plugin": "4.0.0"
   },
   "devDependencies": {
+    "babel-preset-gatsby": "3.3.1",
+    "@babel/preset-react": "7.18.6",
+    "@babel/preset-typescript": "7.18.6",
     "@commitlint/cli": "17.3.0",
     "@commitlint/config-conventional": "17.3.0",
+    "@testing-library/dom": "8.19.0",
+    "@testing-library/jest-dom": "5.16.5",
+    "@testing-library/react": "13.4.0",
+    "@testing-library/react-hooks": "8.0.1",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
-    "@typescript-eslint/eslint-plugin": "^5.47.1",
-    "@typescript-eslint/parser": "^5.47.1",
+    "@types/testing-library__jest-dom": "5.14.5",
+    "@typescript-eslint/eslint-plugin": "5.47.0",
+    "@typescript-eslint/parser": "5.47.0",
+    "autoprefixer": "^10.4.13",
     "commitizen": "4.2.6",
     "cz-conventional-changelog": "3.3.0",
     "eslint": "^8.31.0",
     "eslint-config-prettier": "8.5.0",
-    "eslint-import-resolver-root-import": "1.0.4",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-config-standard": "17.0.0",
+    "eslint-import-resolver-typescript": "3.5.2",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-jsx-a11y": "6.6.1",
+    "eslint-plugin-n": "15.6.0",
     "eslint-plugin-prettier": "4.2.1",
-    "eslint-plugin-react": "^7.31.11",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-unused-imports": "^2.0.0",
-    "eslint-webpack-plugin": "^3.2.0",
+    "eslint-plugin-promise": "6.1.1",
+    "eslint-plugin-react": "7.31.11",
+    "eslint-plugin-react-hooks": "4.6.0",
     "gatsby-plugin-eslint": "^4.0.3",
-    "husky": "8.0.2",
-    "lint-staged": "13.1.0",
+    "gatsby-plugin-postcss": "^6.3.0",
+    "postcss": "^8.4.20",
     "prettier": "2.8.1",
+    "tailwind-dracula": "^1.1.0",
+    "tailwindcss": "^3.2.4",
     "typescript": "4.9.4"
   },
   "keywords": [
@@ -69,9 +81,9 @@
     "start": "gatsby develop -H 0.0.0.0",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "lint": "eslint . --ext ts,tsx --fix",
-    "test": "npm run type-check && npm run lint",
-    "type-check": "tsc --pretty --noEmit"
+    "type-check": "tsc --pretty --noEmit",
+    "lint": "eslint --ignore-path .gitignore \"src/**/*.+(ts|js|tsx)\" --fix",
+    "format": "prettier --ignore-path .gitignore \"src/**/*.+(ts|js|tsx)\" --write"
   },
   "repository": {
     "type": "git",
