--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,8 @@
 {
   "trailingComma": "all",
-  "singleQuote": true,
   "printWidth": 80,
   "tabWidth": 2,
-  "endOfLine": "auto"
+  "endOfLine": "auto",
+  "singleQuote": true,
+  "jsxSingleQuote": true
 }
