--- a/.eslintrc
+++ b/.eslintrc
@@ -35,6 +35,8 @@
       "react/prop-types": "off",
       "react/jsx-filename-extension": "off",
       "react/jsx-props-no-spreading": "off",
+      "react/jsx-uses-react": "error",   
+     "react/jsx-uses-vars": "error",
       "import/prefer-default-export": "off",
       "import/extensions": [
         "error",
@@ -68,5 +70,9 @@
       "react": {
         "version": "detect"
       }
+    },
+    "globals": {
+      "JSX": true,
+      "it": true
     }
   }
