--- a/package.json
+++ b/package.json
@@ -16,14 +16,17 @@
     "gatsby-plugin-catch-links": "^5.6.0",
     "gatsby-plugin-google-analytics": "^5.6.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-image": "^3.6.0",
     "gatsby-plugin-manifest": "^5.6.0",
     "gatsby-plugin-offline": "^6.6.0",
     "gatsby-plugin-react-helmet": "^6.6.0",
     "gatsby-plugin-robots-txt": "^1.8.0",
+    "gatsby-plugin-sharp": "^5.6.0",
     "gatsby-plugin-sitemap": "^6.6.0",
     "gatsby-plugin-typescript": "^5.6.0",
     "gatsby-source-filesystem": "^5.6.0",
     "gatsby-transformer-remark": "^6.6.0",
+    "gatsby-transformer-sharp": "^5.6.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
