--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.3.2",
-    "chart.js": "^4.2.0",
+    "chart.js": "^4.2.1",
     "gatsby": "^5.6.0",
     "gatsby-plugin-catch-links": "^5.6.0",
     "gatsby-plugin-google-analytics": "^5.6.0",
@@ -24,6 +24,7 @@
     "gatsby-plugin-sharp": "^5.6.0",
     "gatsby-plugin-sitemap": "^6.6.0",
     "gatsby-plugin-typescript": "^5.6.0",
+    "gatsby-remark-classes": "^1.0.2",
     "gatsby-source-filesystem": "^5.6.0",
     "gatsby-transformer-remark": "^6.6.0",
     "gatsby-transformer-sharp": "^5.6.0",
@@ -44,7 +45,7 @@
     "@testing-library/react": "13.4.0",
     "@testing-library/react-hooks": "8.0.1",
     "@types/node": "^18.13.0",
-    "@types/react": "^18.0.27",
+    "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.10",
     "@types/testing-library__jest-dom": "5.14.5",
     "@typescript-eslint/eslint-plugin": "5.51.0",
@@ -53,7 +54,7 @@
     "babel-preset-gatsby": "3.6.0",
     "commitizen": "4.3.0",
     "cz-conventional-changelog": "3.3.0",
-    "eslint": "^8.33.0",
+    "eslint": "^8.34.0",
     "eslint-config-prettier": "8.6.0",
     "eslint-config-standard": "17.0.0",
     "eslint-import-resolver-typescript": "3.5.3",
@@ -67,9 +68,9 @@
     "gatsby-plugin-eslint": "^4.0.3",
     "gatsby-plugin-postcss": "^6.6.0",
     "postcss": "^8.4.21",
-    "prettier": "2.8.3",
+    "prettier": "2.8.4",
     "tailwind-dracula": "^1.1.0",
-    "tailwindcss": "^3.2.4",
+    "tailwindcss": "^3.2.6",
     "typescript": "4.9.5"
   },
   "keywords": [
