a whole lot of work for nothing

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,14 +11,15 @@
     "skipLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"],
+      "@src/*": ["./src/*"],
+      "@static/*": ["./static/*"],
       "@components/*": ["./src/components/*"],
+      "@hooks/*": ["./src/hooks/*"],
       "@images/*": ["./src/images/*"],
       "@pages/*": ["./src/pages/*"],
       "@styles/*": ["./src/styles/*"],
       "@templates/*": ["./src/templates/*"],
       "@utils/*": ["./src/utils/*"],
-      "@static/*": ["./static/*"]
     },
     "types": ["node", "@testing-library/jest-dom"]
   },
