--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
-    "tsconfig-paths-webpack-plugin": "4.0.0"
+    "tsconfig-paths-webpack-plugin": "4.0.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@babel/preset-react": "7.18.6",
@@ -44,10 +45,11 @@
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.4.0",
     "@testing-library/react-hooks": "8.0.1",
-    "@types/node": "^18.13.0",
-    "@types/react": "^18.0.28",
+    "@types/node": "^18.11.18",
+    "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/testing-library__jest-dom": "5.14.5",
+    "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "5.51.0",
     "@typescript-eslint/parser": "5.51.0",
     "autoprefixer": "^10.4.13",
@@ -71,7 +73,7 @@
     "prettier": "2.8.4",
     "tailwind-dracula": "^1.1.0",
     "tailwindcss": "^3.2.6",
-    "typescript": "4.9.5"
+    "typescript": "^4.9.5"
   },
   "keywords": [
     "gatsby"
