--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.3.3",
     "chart.js": "^4.2.1",
-    "gatsby": "^5.6.1",
+    "gatsby": "5.8.0-next.0",
     "gatsby-plugin-catch-links": "^5.6.0",
     "gatsby-plugin-google-analytics": "^5.6.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
@@ -29,9 +29,9 @@
     "gatsby-transformer-remark": "^6.6.0",
     "gatsby-transformer-sharp": "^5.6.0",
     "prop-types": "^15.8.1",
-    "react": "^18.2.0",
+    "react": "0.0.0-experimental-4fcc9184a-20230217",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "0.0.0-experimental-4fcc9184a-20230217",
     "react-helmet": "^6.1.0",
     "tsconfig-paths-webpack-plugin": "4.0.0",
     "uuid": "^9.0.0"
@@ -80,7 +80,7 @@
   ],
   "license": "MIT",
   "scripts": {
-    "build": "gatsby build --prefix-paths",
+    "build": "gatsby build",
     "start": "gatsby develop -H 0.0.0.0",
     "serve": "gatsby serve -H 0.0.0.0",
     "clean": "gatsby clean",
