--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gatsby-portfolio",
   "private": true,
   "description": "The portfolio of Tyler Campbell; Full Stack Software Engineer",
-  "version": "4.1.0",
+  "version": "4.1.1",
   "author": "Tyler Campbell",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
@@ -10,29 +10,31 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "axios": "^1.6.2",
+    "axios": "^1.6.3",
     "chart.js": "^4.4.1",
-    "gatsby": "^5.12.12",
-    "gatsby-plugin-catch-links": "^5.12.0",
-    "gatsby-plugin-google-analytics": "^5.12.0",
+    "gatsby": "^5.13.1",
+    "gatsby-plugin-catch-links": "^5.13.0",
+    "gatsby-plugin-google-analytics": "^5.13.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
-    "gatsby-plugin-image": "^3.12.3",
-    "gatsby-plugin-manifest": "^5.12.3",
-    "gatsby-plugin-offline": "^6.12.3",
-    "gatsby-plugin-react-helmet": "^6.12.0",
+    "gatsby-plugin-image": "^3.13.0",
+    "gatsby-plugin-manifest": "^5.13.0",
+    "gatsby-plugin-offline": "^6.13.0",
+    "gatsby-plugin-react-helmet": "^6.13.0",
     "gatsby-plugin-robots-txt": "^1.8.0",
-    "gatsby-plugin-sharp": "^5.12.3",
-    "gatsby-plugin-sitemap": "^6.12.3",
-    "gatsby-plugin-typescript": "^5.12.1",
+    "gatsby-plugin-sass": "^6.13.0",
+    "gatsby-plugin-sharp": "^5.13.0",
+    "gatsby-plugin-sitemap": "^6.13.0",
+    "gatsby-plugin-typescript": "^5.13.0",
     "gatsby-remark-classes": "^1.0.2",
-    "gatsby-source-filesystem": "^5.12.1",
-    "gatsby-transformer-remark": "^6.12.3",
-    "gatsby-transformer-sharp": "^5.12.3",
+    "gatsby-source-filesystem": "^5.13.0",
+    "gatsby-transformer-remark": "^6.13.0",
+    "gatsby-transformer-sharp": "^5.13.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "sass": "^1.69.5",
     "tsconfig-paths-webpack-plugin": "4.1.0",
     "uuid": "^9.0.1"
   },
@@ -42,37 +44,37 @@
     "@commitlint/cli": "18.4.3",
     "@commitlint/config-conventional": "18.4.3",
     "@testing-library/dom": "9.3.3",
-    "@testing-library/jest-dom": "6.1.5",
+    "@testing-library/jest-dom": "6.1.6",
     "@testing-library/react": "14.1.2",
     "@testing-library/react-hooks": "8.0.1",
-    "@types/node": "^20.10.4",
+    "@types/node": "^20.10.5",
     "@types/react": "^18.2.45",
-    "@types/react-dom": "^18.2.17",
+    "@types/react-dom": "^18.2.18",
     "@types/testing-library__jest-dom": "5.14.9",
     "@types/uuid": "^9.0.7",
-    "@typescript-eslint/eslint-plugin": "6.14.0",
-    "@typescript-eslint/parser": "6.14.0",
+    "@typescript-eslint/eslint-plugin": "6.16.0",
+    "@typescript-eslint/parser": "6.16.0",
     "autoprefixer": "^10.4.16",
-    "babel-preset-gatsby": "3.12.1",
+    "babel-preset-gatsby": "3.13.0",
     "commitizen": "4.3.0",
     "cz-conventional-changelog": "3.3.0",
-    "eslint": "^8.55.0",
+    "eslint": "^8.56.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-config-standard": "17.1.0",
     "eslint-import-resolver-typescript": "3.6.1",
     "eslint-plugin-import": "2.29.1",
     "eslint-plugin-jsx-a11y": "6.8.0",
-    "eslint-plugin-n": "16.4.0",
-    "eslint-plugin-prettier": "5.0.1",
+    "eslint-plugin-n": "16.5.0",
+    "eslint-plugin-prettier": "5.1.2",
     "eslint-plugin-promise": "6.1.1",
     "eslint-plugin-react": "7.33.2",
     "eslint-plugin-react-hooks": "4.6.0",
     "gatsby-plugin-eslint": "^4.0.4",
-    "gatsby-plugin-postcss": "^6.12.0",
+    "gatsby-plugin-postcss": "^6.13.0",
     "postcss": "^8.4.32",
     "prettier": "3.1.1",
     "tailwind-dracula": "^1.1.0",
-    "tailwindcss": "^3.3.6",
+    "tailwindcss": "^3.4.0",
     "typescript": "^5.3.3"
   },
   "keywords": [
