--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.6.7",
     "chart.js": "^4.4.1",
     "gatsby": "^5.13.3",
+    "gatsby-adapter-netlify": "^1.1.3",
     "gatsby-plugin-catch-links": "^5.13.1",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-image": "^3.13.1",
